--- a/home.html
+++ b/home.html
@@ -5,52 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dream house</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <link
       rel="icon"
       href="http://specthemes.com/dreamhouse-template/dreamhouse/img/logos/logo-shortcut.png"
       type="image/x-icon"
     />
-    <style>
-      header,
-      .navbar {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        
-      }
-      .dropdown .dropdown__main a{
-        font-size: 16px;
-        text-decoration: none;
-        padding: 14px 16px;
-        color: black;
-        background-color: white;
-      }
-      .dropdown-content {
-        display: none;
-        position: absolute;
-        background-color: #f9f9f9;
-        min-width: 160px;
-      }
-      .dropdown-content a {
-        display: block;
-        padding: 12px 16px;
-        color: black;
-        text-decoration: none;
-        text-align: left;
-      }
-      .dropdown:hover .dropdown-content {
-        display: block;
-      }
-      .dropdown__main a:hover, .dropdown-content a:hover {
-        color: red;
-      }
-    </style>
+    <link rel="stylesheet" href="/css/home.css" />
   </head>
   <body>
     <header>
       <div>
-        <a href="/dreamhouse-architecture-interior-design/test.html">
+        <a href="/home.html">
           <img
             alt="Logo company logo"
             src="http://specthemes.com/dreamhouse-template/dreamhouse/img/logos/logo.png"
@@ -67,12 +36,12 @@
           </div>
           <div class="dropdown-content">
             <a href="#">HOME SLIDER</a>
-            <a href="#">HOME IMAGE</a> </a>
+            <a href="#">HOME IMAGE</a>
             <a href="#">HOME VIDEO</a>
           </div>
         </div>
         <div class="dropdown">
-           <div class="dropdown__main">
+          <div class="dropdown__main">
             <a href="#">PROJECTS</a>
             <i class="fa fa-caret-down"></i>
           </div>
@@ -88,7 +57,7 @@
           </div>
         </div>
         <div class="dropdown">
-           <div class="dropdown__main">
+          <div class="dropdown__main">
             <a href="#">BLOG</a>
             <i class="fa fa-caret-down"></i>
           </div>
@@ -99,7 +68,7 @@
           </div>
         </div>
         <div class="dropdown">
-         <div class="dropdown__main">
+          <div class="dropdown__main">
             <a href="#">SHOP</a>
             <i class="fa fa-caret-down"></i>
           </div>
@@ -108,7 +77,7 @@
             <a href="#">SHOP DETAIL</a>
           </div>
         </div>
-         <div class="dropdown">
+        <div class="dropdown">
           <div class="dropdown__main">
             <a href="#">CONTACT</a>
           </div>
