--- a/about.html
+++ b/about.html
@@ -12,11 +12,53 @@
       .frame {
         width: 600px;
         height: 350px;
-        border: 5px solid #ccc;
+        border: 10px solid #f2f2f2;
         background:#fff;
         margin-top: 30px;
-        padding: 15px 10px;
+        padding: 50px 60px;
       }
+
+
+	.container{
+		width: 100%;
+		height: auto;
+        background: white;
+        margin-top: 50px;	
+	
+
+		/*flexbox*/
+		display: flex;
+		flex-direction: row;
+		justify-content:center;
+	}
+
+
+	.box1{
+		position: relative;
+		padding: 0px;
+		width: 20%;
+		height: 500px;
+		margin:10px;
+		text-align: left;
+		
+	}
+
+	.box{
+		position: relative;
+		width: 20%;
+		padding: 30px;
+		height: 500px;
+		background: #fff;
+		border: 13px solid #bda87f;
+	    margin:10px;
+	    margin-top: 120px;
+		box-sizing: border-box;
+
+
+	
+	}
+
+
 
   </style>
 
@@ -96,71 +138,55 @@
     
 </div>
 
-	
+
 <div class="row">
-  
-<div class="column">
-       <img src="images/portret1.jpg" alt="Proffesional team" style="width:100%">
+  <div class="column">
+  	
+    <img src="images/portret1.jpg" alt="Proffesional team" style="width:100%">
        <div class="tekst_overlay">
     	    <h2>Laura Thorn</h2>
     	    <h3>Project Maneger</h3>
     	     <p>I came to San Francisco and MWA Architects with a Master’s Degree from the National University of Cordoba, Argentina. I have extensive experience working on architectural and interior design projects in several countries around the world with a strong background in managing and developing complex design projects, including residential, retail, mixed-use, hospitality, transportation, offices and, workplaces.
 
-             </p>
+</p>
     	</div>
   </div>
  
-  
-<div class="column">
+  <div class="column">
     <img src="images/portret2.jpg" alt="Profesional team " style="width:100%">
     <div class="tekst_overlay">
     	    <h2>Jack Semper</h2>
     	    <h3>Designer</h3>
     	    <p>My experience is in the planning and design of civic, industrial, and healthcare facilities. I came to SF and MWA with a BSAS from the University of Wisconsin and a Masters from the University of Illinois at Urbana-Champaign – I have a good Midwestern perspective on West Coast projects. My efforts have been focused on designing envelopes for the built environment, a skill that helps me develop exteriors that are robust and energy efficient while being aesthetically pleasing.
 
-            </p>
+</p>
        </div>
   </div>
-  
-<div class="column">
+  <div class="column">
     <img src="images/portret3.jpg" alt="Profesional team" style="width:100%">
     <div class="tekst_overlay">
     	    <h2>Philip Wilson</h2>
     	    <h3>Architect</h3>
     	     <p>Philip graduated from the University of Oregon, earning a bachelor’s degree in Architecture with a focus on sustainability. She was drawn to MWA because of our shared belief that social equity and environmentally responsible design go hand in hand. As a registered architect and AIA board member, he brings over 5 years of experience in mixed-use housing and higher education projects.
 
-            </p>
+</p>
     </div>
   </div>
-  
-<div class="column">
+  <div class="column">
     <img src="images/portret4.jpg" alt="Profesional team" style="width:100%">
     <div class="tekst_overlay">
     	    <h2>Amanda Rich</h2>
     	    <h3>Interior Designer</h3>
     	     <p>I bring a balance of technical expertise and strong communication skills to all my projects. I see my role as an advocate for my clients and their projects. Good design can resolve a wide range of issues, and I appreciate collaborating on design teams working on anything from pump stations in public parks to affordable housing for seniors.
 
-             </p>
-     </div>
+</p>
+       </div>
   </div>
 </div>
 
 
 
-
-
-
-
-
  
-
-
-
-
-
-
-
-
 
 </body>
 
