INT-3: Add articles

--- a/home.html
+++ b/home.html
@@ -154,6 +154,68 @@
           </div>
         </div>
       </section>
+      <div class="wrapper">
+        <article class="about_us__article">
+          <aside class="about_us__article__aside">
+            <h3 class="about_us__article-heading">About Us</h3>
+            <h1 class="about_us__article-title">
+              Welcome! We are DreamHouse. Architecture Agency From USA
+            </h1>
+            <p class="about_us__acticle-paragraph">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras
+              lacinia magna vel molestie faucibus. Donec auctor et urnaLorem
+              ipsum dolor sit amet, consectetur adipiscing elit. Cras lacinia
+              magna vel molestie faucibus. Cras lacinia magna vel molestie
+              faucibus. Donec auctor et urnaLorem ipsum dolor sit amet,
+              consectetur adipiscing elit. Cras lacinia magna vel molestie
+              faucibus.
+            </p>
+            <br />
+            <p class="about_us__article-paragraph">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras
+              lacinia magna vel molestie faucibus. Donec auctor et urnaLorem
+              ipsum dolor sit amet, consectetur adipiscing elit.
+            </p>
+            <div class="about_us__article-info">
+              <div class="about_us__article-info-house">
+                <h4>Your dream house</h4>
+                <p>Lorem ipsum dolor sit.</p>
+              </div>
+              <div class="about_us__article-info-plans">
+                <h4>Creative Art Plans</h4>
+                <p>Lorem ipsum dolor sit.</p>
+              </div>
+            </div>
+            <button class="medium__button-black">Read More</button>
+          </aside>
+          <div class="outline-bordered-right">
+            <img
+              src="http://specthemes.com/dreamhouse-template/dreamhouse/img/content/home1.jpg"
+              alt="home model"
+            />
+          </div>
+        </article>
+
+        <article class="luxury_house__article">
+          <div class="outline-bordered-left">
+            <img
+              src="http://specthemes.com/dreamhouse-template/dreamhouse/img/content/home-pr-2.jpg"
+              alt="luxury summer homes"
+            />
+          </div>
+          <aside class="luxury_house__article__aside">
+            <h3 class="luxury_house__article-heading">01</h3>
+            <h1 class="luxury_house__article-title">Luxury Summer House</h1>
+            <hr class="luxury_house__article-line" />
+            <p class="luxury_house__article-paragraph">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras
+              lacinia magna vel molestie faucibus. Donec auctor et urnaLorem
+              ipsum dolor sit amet, consectetur adipiscing elit. Cras lacinia
+              magna vel molestie faucibus.
+            </p>
+          </aside>
+        </article>
+      </div>
     </main>
   </body>
 </html>
