--- a/home.html
+++ b/home.html
@@ -215,6 +215,28 @@
             </p>
           </aside>
         </article>
+
+        <article class="flinders_street__station">
+          <aside class="flinders_street__station__aside">
+            <h3 class="flinders_street__station-heading">01</h3>
+            <h1 class="flinders_street__station-title">
+              Flinders Street Station
+            </h1>
+            <hr class="flinders_street__station-line" />
+            <p class="flinders_street__station-paragraph">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras
+              lacinia magna vel molestie faucibus. <br />
+              auctor et urnaLorem ipsum dolor sit amet, consectetur adipiscing
+              elit. Cras lacinia magna vel molestie faucibus
+            </p>
+          </aside>
+          <div class="outline-bordered-right">
+            <img
+              src="http://specthemes.com/dreamhouse-template/dreamhouse/img/content/home-pr-1.jpg"
+              alt="home model"
+            />
+          </div>
+        </article>
       </div>
     </main>
   </body>
