--- a/home.html
+++ b/home.html
@@ -218,7 +218,7 @@
 
         <article class="flinders_street__station">
           <aside class="flinders_street__station__aside">
-            <h3 class="flinders_street__station-heading">01</h3>
+            <h3 class="flinders_street__station-heading">02</h3>
             <h1 class="flinders_street__station-title">
               Flinders Street Station
             </h1>
@@ -236,6 +236,26 @@
               alt="home model"
             />
           </div>
+        </article>
+
+        <article class="milwaukee_summer_house__article">
+          <div class="outline-bordered-left">
+            <img
+              src="http://specthemes.com/dreamhouse-template/dreamhouse/img/content/home-pr-4.jpg"
+              alt="Milwaukee summer homes"
+            />
+          </div>
+          <aside class="milwaukee_summer_house__aside">
+            <h3 class="milwaukee_summer_house-heading">03</h3>
+            <h1 class="milwaukee_summer_house-title">Milwaukee Summer House</h1>
+            <hr class="milwaukee_summer_house-line" />
+            <p class="milwaukee_summer_house-paragraph">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras
+              lacinia magna vel molestie faucibus. Donec auctor et urnaLorem
+              ipsum dolor sit amet, consectetur adipiscing elit. Cras lacinia
+              magna vel molestie faucibus.
+            </p>
+          </aside>
         </article>
       </div>
     </main>
