INT-5: Add news articles, company stats

--- a/home.html
+++ b/home.html
@@ -186,7 +186,9 @@
                 <p>Lorem ipsum dolor sit.</p>
               </div>
             </div>
-            <button class="medium__button-black">Read More</button>
+            <button class="medium__button medium__button-black">
+              Read More
+            </button>
           </aside>
           <div class="outline-bordered-right">
             <img
@@ -257,7 +259,80 @@
             </p>
           </aside>
         </article>
+
+        <article class="latest_news__article">
+          <div class="latest_news__article-info">
+            <h3 class="latest_news__article-heading">LATEST NEWS</h3>
+            <h1>Fresh updates for you, read with detail.</h1>
+          </div>
+          <div class="latest_news__article-news">
+            <article class="news">
+              <h3 class="news__title">Plant trees while searching the web</h3>
+              <time class="news__date">Dec 04, 2017</time>
+              <p class="news__paragraph">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras
+                lacinia magna vel molestie faucibus.
+              </p>
+              <hr class="news__line" />
+              <button class="medium__button medium__button-lightsalmon">
+                Read More
+              </button>
+            </article>
+            <article class="news">
+              <h3 class="news__title">Plant trees while searching the web</h3>
+              <time class="news__date">Dec 04, 2017</time>
+              <p class="news__paragraph">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras
+                lacinia magna vel molestie faucibus.
+              </p>
+              <hr class="news__line" />
+              <button class="medium__button medium__button-lightsalmon">
+                Read More
+              </button>
+            </article>
+            <article class="news">
+              <h3 class="news__title">Plant trees while searching the web</h3>
+              <time class="news__date">Dec 04, 2017</time>
+              <p class="news__paragraph">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras
+                lacinia magna vel molestie faucibus.
+              </p>
+              <hr class="news__line" />
+              <button class="medium__button medium__button-lightsalmon">
+                Read More
+              </button>
+            </article>
+          </div>
+        </article>
       </div>
+
+      <section class="company-stats">
+        <div class="company-info">
+          <h3>We are creative arhitecture Design agency</h3>
+        </div>
+        <div class="company-stats-info">
+          <p class="company-stats-info-paragraph">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras
+            lacinia magna vel molestie faucibus. Donec auctor et urnaLorem ipsum
+            dolor sit amet, consectetur adipiscing elit. Cras lacinia magna vel
+            molestie faucibus. Cras lacinia magna vel molestie faucibus.
+          </p>
+          <div class="company-stats-info-details">
+            <div>
+              <p class="stats">150</p>
+              <p class="stats-info">HAPPY CUSTOMERS</p>
+            </div>
+            <div>
+              <p class="stats">270</p>
+              <p class="stats-info">FINISHED PROJECTS</p>
+            </div>
+            <div>
+              <p class="stats">490</p>
+              <p class="stats-info">DAYS OF WORK</p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
