INT-6: Add special proces

--- a/home.html
+++ b/home.html
@@ -308,7 +308,7 @@
 
       <section class="company-stats">
         <div class="company-info">
-          <h3>We are creative arhitecture Design agency</h3>
+          <h3>We are creative architecture Design agency</h3>
         </div>
         <div class="company-stats-info">
           <p class="company-stats-info-paragraph">
@@ -333,6 +333,62 @@
           </div>
         </div>
       </section>
+
+      <div class="wrapper">
+        <article class="special-prices__article">
+          <div class="special-prices__article-info">
+            <h3 class="special-prices__article-heading">SPECIAL PRICES</h3>
+            <h1>Our Pricing List</h1>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras
+              lacinia magna vel molestie faucibus. Donec auctor et urnaLorem
+              ipsum dolor sit amet, consectetur adipiscing elit
+            </p>
+          </div>
+          <div class="special-prices__article-offers">
+            <article class="price">
+              <h3 class="price__title">2 Room Apartment</h3>
+              <p class="price__offer">&#36;49,000</p>
+              <ul class="apartment-space">
+                <li>77m<sup>2</sup></li>
+                <li>30m<sup>2</sup></li>
+                <li>15m<sup>2</sup></li>
+              </ul>
+              <hr class="price__line" />
+              <button class="medium__button medium__button-lightsalmon__border">
+                CONTACT US
+              </button>
+            </article>
+            <article class="price best-price">
+              <span class="price-badge">Best value</span>
+              <h3 class="price__title">3 Room Apartment</h3>
+              <p class="price__offer">&#36;89,000</p>
+              <ul class="apartment-space">
+                <li>140m<sup>2</sup></li>
+                <li>80m<sup>2</sup></li>
+                <li>50m<sup>2</sup></li>
+              </ul>
+              <hr class="price__line" />
+              <button class="medium__button medium__button-lightsalmon">
+                CONTACT US
+              </button>
+            </article>
+            <article class="price">
+              <h3 class="price__title">4 Room Apartment</h3>
+              <p class="price__offer">&#36;159,000</p>
+              <ul class="apartment-space">
+                <li>220m<sup>2</sup></li>
+                <li>150m<sup>2</sup></li>
+                <li>90m<sup>2</sup></li>
+              </ul>
+              <hr class="price__line" />
+              <button class="medium__button medium__button-lightsalmon__border">
+                CONTACT US
+              </button>
+            </article>
+          </div>
+        </article>
+      </div>
     </main>
   </body>
 </html>
