INT-7: Add partners

--- a/home.html
+++ b/home.html
@@ -388,6 +388,37 @@
             </article>
           </div>
         </article>
+
+        <section class="partners__section">
+          <div class="partners__section-info">
+            <h3 class="partners__section-heading">OUR CLIENTS</h3>
+            <h1>Great Clients</h1>
+          </div>
+          <div>
+            <img
+              src="http://specthemes.com/dreamhouse-template/dreamhouse/img/partners/partner1.jpg"
+              alt="designers"
+            />
+          </div>
+          <div>
+            <img
+              src="http://specthemes.com/dreamhouse-template/dreamhouse/img/partners/partner2.jpg"
+              alt="barbers"
+            />
+          </div>
+          <div>
+            <img
+              src="http://specthemes.com/dreamhouse-template/dreamhouse/img/partners/partner3.jpg"
+              alt="clothing"
+            />
+          </div>
+          <div>
+            <img
+              src="http://specthemes.com/dreamhouse-template/dreamhouse/img/partners/partner4.jpg"
+              alt="restaurant"
+            />
+          </div>
+        </section>
       </div>
     </main>
   </body>
