--- a/home.html
+++ b/home.html
@@ -421,5 +421,64 @@
         </section>
       </div>
     </main>
+
+    <footer class="footer">
+      <div class="wrapper">
+        <div class="footer-content">
+          <div>
+            <img
+              src="http://specthemes.com/dreamhouse-template/dreamhouse/img/logos/logo-footer.png"
+              alt="logo"
+            />
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras
+              lacinia magna vel molestie faucibus.
+            </p>
+            <p>
+              &copy; Copyright 2021 - 2022, INT20_21_Gr22. All rights reserved
+            </p>
+          </div>
+          <div>
+            <h4>Site map</h4>
+            <ul>
+              <li><a href="home.html">Home</a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="services.html">Services</a></li>
+              <li><a href="contact.html">Contact</a></li>
+            </ul>
+          </div>
+          <div>
+            <h4>Contact us</h4>
+            <ul>
+              <li>Call us</li>
+              <li><a href="tel:+1 23-456-789">+1 23-456-789</a></li>
+              <li>Mail us</li>
+              <li>
+                <a href="mailto: dreamhouse@gmail.com">dreamhouse@gmail.com</a>
+              </li>
+            </ul>
+          </div>
+          <div>
+            <h4>Visit us</h4>
+            <ul>
+              <li>Our location</li>
+              <li><address>113, New York, NY Sheram 113 254</address></li>
+            </ul>
+          </div>
+          <div>
+            <h4>Search, social links</h4>
+            <ul>
+              <input type="text" placeholder="Search..." name="search" />
+              <ul>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+              </ul>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
