--- a/home.html
+++ b/home.html
@@ -425,7 +425,7 @@
     <footer class="footer">
       <div class="wrapper">
         <div class="footer-content">
-          <div>
+          <div class="footer-content__main">
             <img
               src="http://specthemes.com/dreamhouse-template/dreamhouse/img/logos/logo-footer.png"
               alt="logo"
@@ -434,11 +434,11 @@
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras
               lacinia magna vel molestie faucibus.
             </p>
-            <p>
-              &copy; Copyright 2021 - 2022, INT20_21_Gr22. All rights reserved
+            <p class="footer-copyright">
+              &copy; Copyright, INT20_21_Gr22. All rights reserved
             </p>
           </div>
-          <div>
+          <div class="footer-site-map">
             <h4>Site map</h4>
             <ul>
               <li><a href="home.html">Home</a></li>
@@ -447,7 +447,7 @@
               <li><a href="contact.html">Contact</a></li>
             </ul>
           </div>
-          <div>
+          <div class="footer-contact-us">
             <h4>Contact us</h4>
             <ul>
               <li>Call us</li>
@@ -458,22 +458,58 @@
               </li>
             </ul>
           </div>
-          <div>
+          <div class="footer-visit-us">
             <h4>Visit us</h4>
             <ul>
               <li>Our location</li>
               <li><address>113, New York, NY Sheram 113 254</address></li>
             </ul>
           </div>
-          <div>
+          <div class="footer-search">
             <h4>Search, social links</h4>
             <ul>
-              <input type="text" placeholder="Search..." name="search" />
-              <ul>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
+              <li class="search">
+                <input type="text" placeholder="Search..." name="search" />
+              </li>
+
+              <ul class="nested-list">
+                <li>
+                  <a href=""
+                    ><img
+                      src="/img/facebook.png"
+                      alt="facebook logo"
+                      width="20px"
+                      height="20px"
+                  /></a>
+                </li>
+                <li>
+                  <a href="">
+                    <img
+                      src="/img/instagram.png"
+                      alt="instagram logo"
+                      width="20px"
+                      height="20px"
+                    />
+                  </a>
+                </li>
+                <li>
+                  <a href=""
+                    ><img
+                      src="/img/twitter.png"
+                      alt="twitter logo"
+                      width="20px"
+                      height="20px"
+                  /></a>
+                </li>
+                <li>
+                  <a href=""
+                    ><img
+                      src="/img/youtube.png"
+                      alt="youtube logo"
+                      width="20px"
+                      height="20px"
+                  /></a>
+                </li>
               </ul>
             </ul>
           </div>
