--- a/contact.html
+++ b/contact.html
@@ -196,7 +196,7 @@ body{
             <td>
                 <img src="phone-call.jpg" alt="Phone Icon" width="35" height="35">
             </td>
-            <td>
+            <td style="background-color: blanchedalmond;">
                 <p  align="left" style="color:goldenrod">Phone</p>
             </td>
         </tr>
@@ -209,7 +209,7 @@ body{
             <td>
                 <img src="address-icon.jpg" alt="Address Icon" width="35" height="35">
             </td>
-            <td>
+            <td style="background-color: blanchedalmond;">
                 <p align="left" style="color:goldenrod">Our Address</p>
             </td>
         </tr>
@@ -225,7 +225,7 @@ body{
             <td>
                 <img src="email.jpg" alt="Email Icon" width="35" height="35">
             </td>
-            <td>
+            <td style="background-color: blanchedalmond;">
                 <p align="left" style="color:goldenrod">Email</p>
             </td>
         </tr>
