--- a/shopdetail.html
+++ b/shopdetail.html
@@ -72,35 +72,23 @@
             background-image: url("black.jpg");
         }
         table{
-          margin-top: 60px;
-          margin-left: 50px;
-          margin-bottom: 50px;
-          margin-right: 30px;
+          margin: 60px 30px 50px 50px;
         }
         .table1{
-          margin-top: 65px;
-          margin-left: 50px;
-          margin-bottom: 50px;
-          margin-right: 20px;
-        }
+          margin: 65px 20px 50px 50px;
+         }
         .square{
             width:350px;
             height:350px;
             font-family:Arial, Helvetica, sans-serif;
             text-align: center;
-            margin-top: -675px;  
-            margin-bottom: 200px;
-            margin-left: 885px; 
-            margin-right: 190px;  
+            margin: -675px 190px 200px 885px;  
         }
         .button{
                 color:white;
                 background-color: rgb(78, 9, 9);
                 text-align: center;
-                margin-top:-750px;
-                margin-bottom: 200px;
-                margin-right: 100px;
-                margin-left: 870px;
+                margin: -750px 100px 200px 870px;
             }
         .responsive-map{
         overflow: hidden;
