--- a/shop.html
+++ b/shop.html
@@ -79,52 +79,28 @@
                 font-family: Arial, Helvetica, sans-serif;
             }
             .div1{
-                margin-top: 90px;
-                margin-bottom: 30px;
-                margin-right: 10px;
-                margin-left: 200px;
+                margin: 90px 10px 30px 200px;
             }
             .div2{
-                margin-top: -280px;
-                margin-bottom: -110px;
-                margin-right: 10px;
-                margin-left: 470px;
+                margin: -280px 10px -110px 470px;
             }
             .div3{
-                margin-top:-250px;
-                margin-bottom: -100px;
-                margin-right: 10px;
-                margin-left: 740px;
+                margin: -250px 10px -100px 740px;
             }
             .div4{
-                margin-top: -250px;
-                margin-bottom: -100px;
-                margin-right: 10px;
-                margin-left: 1010px;
+                margin: -250px 10px -100px 1010px;
             }
             .div5{
-                margin-top: 250px;
-                margin-bottom: -10px;
-                margin-right: 10px;
-                margin-left: 200px;
+                margin: 250px 10px -10px 200px;
             }
             .div6{
-                margin-top: -250px;
-                margin-bottom: -10px;
-                margin-right: 10px;
-                margin-left: 470px;
+                margin: -250px 10px -10px 470px;
             }
             .div7{
-                margin-top: -250px;
-                margin-bottom: -10px;
-                margin-right: 10px;
-                margin-left: 740px;
+                margin: -250px 10px -10px 740px;
             }
             .div8{
-                margin-top: -250px;
-                margin-bottom: -10px;
-                margin-right: 10px;
-                margin-left: 1020px;
+                margin: -250px 10px -10px 1020px;
             }
             .button1, .button2, .button3, .button4, .button5, .button6, .button7, .button8{
                 color:white;
@@ -134,10 +110,7 @@
             .fld1{
               background-color:beige;
               border-color: rgb(78,9,9);
-              margin-top: 50px;
-              margin-bottom: 50px;
-              margin-right: 50px;
-              margin-left: 50px;
+              margin: 50px 50px 50px 50px;
               text-align: center;
             }
             legend{
