INT-9: Modify images folder

--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
     />
     <link
       rel="icon"
-      href="http://specthemes.com/dreamhouse-template/dreamhouse/img/logos/logo-shortcut.png"
+      href="http://specthemes.com/dreamhouse-template/dreamhouse/images/logos/logo-shortcut.png"
       type="image/x-icon"
     />
     <link rel="stylesheet" href="/css/home.css" />
@@ -26,7 +26,7 @@
           <a href="/home.html">
             <img
               alt="Logo company logo"
-              src="/img/logo.png"
+              src="/images/logo.png"
               width="350"
               height="60"
             />
@@ -192,7 +192,7 @@
           </aside>
           <div class="outline-bordered-right">
             <img
-              src="http://specthemes.com/dreamhouse-template/dreamhouse/img/content/home1.jpg"
+              src="http://specthemes.com/dreamhouse-template/dreamhouse/images/content/home1.jpg"
               alt="home model"
             />
           </div>
@@ -201,7 +201,7 @@
         <article class="luxury_house__article">
           <div class="outline-bordered-left">
             <img
-              src="http://specthemes.com/dreamhouse-template/dreamhouse/img/content/home-pr-2.jpg"
+              src="http://specthemes.com/dreamhouse-template/dreamhouse/images/content/home-pr-2.jpg"
               alt="luxury summer homes"
             />
           </div>
@@ -234,7 +234,7 @@
           </aside>
           <div class="outline-bordered-right">
             <img
-              src="http://specthemes.com/dreamhouse-template/dreamhouse/img/content/home-pr-1.jpg"
+              src="http://specthemes.com/dreamhouse-template/dreamhouse/images/content/home-pr-1.jpg"
               alt="home model"
             />
           </div>
@@ -243,7 +243,7 @@
         <article class="milwaukee_summer_house__article">
           <div class="outline-bordered-left">
             <img
-              src="http://specthemes.com/dreamhouse-template/dreamhouse/img/content/home-pr-4.jpg"
+              src="http://specthemes.com/dreamhouse-template/dreamhouse/images/content/home-pr-4.jpg"
               alt="Milwaukee summer homes"
             />
           </div>
@@ -396,25 +396,25 @@
           </div>
           <div>
             <img
-              src="http://specthemes.com/dreamhouse-template/dreamhouse/img/partners/partner1.jpg"
+              src="http://specthemes.com/dreamhouse-template/dreamhouse/images/partners/partner1.jpg"
               alt="designers"
             />
           </div>
           <div>
             <img
-              src="http://specthemes.com/dreamhouse-template/dreamhouse/img/partners/partner2.jpg"
+              src="http://specthemes.com/dreamhouse-template/dreamhouse/iimages/partners/partner2.jpg"
               alt="barbers"
             />
           </div>
           <div>
             <img
-              src="http://specthemes.com/dreamhouse-template/dreamhouse/img/partners/partner3.jpg"
+              src="http://specthemes.com/dreamhouse-template/dreamhouse/images/partners/partner3.jpg"
               alt="clothing"
             />
           </div>
           <div>
             <img
-              src="http://specthemes.com/dreamhouse-template/dreamhouse/img/partners/partner4.jpg"
+              src="http://specthemes.com/dreamhouse-template/dreamhouse/images/partners/partner4.jpg"
               alt="restaurant"
             />
           </div>
@@ -427,7 +427,7 @@
         <div class="footer-content">
           <div class="footer-content__main">
             <img
-              src="http://specthemes.com/dreamhouse-template/dreamhouse/img/logos/logo-footer.png"
+              src="http://specthemes.com/dreamhouse-template/dreamhouse/images/logos/logo-footer.png"
               alt="logo"
             />
             <p>
@@ -476,7 +476,7 @@
                 <li>
                   <a href=""
                     ><img
-                      src="/img/facebook.png"
+                      src="/images/facebook.png"
                       alt="facebook logo"
                       width="20px"
                       height="20px"
@@ -485,7 +485,7 @@
                 <li>
                   <a href="">
                     <img
-                      src="/img/instagram.png"
+                      src="/images/instagram.png"
                       alt="instagram logo"
                       width="20px"
                       height="20px"
@@ -495,7 +495,7 @@
                 <li>
                   <a href=""
                     ><img
-                      src="/img/twitter.png"
+                      src="/images/twitter.png"
                       alt="twitter logo"
                       width="20px"
                       height="20px"
@@ -504,7 +504,7 @@
                 <li>
                   <a href=""
                     ><img
-                      src="/img/youtube.png"
+                      src="/images/youtube.png"
                       alt="youtube logo"
                       width="20px"
                       height="20px"
