--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 	
 
 
- <style>
+<style>
 
 /* Fotoja ne square 2 */
       .frame {
@@ -65,17 +65,17 @@
 	      }
 
 
-
-  </style>
-
+</style>
 
 </head>
 
+
+	
 <body>
 
-	<!-- Pjesa e headerit,lidhja mes webpages -->
+<!-- Pjesa e headerit,lidhja mes webpages -->
 
-	 <header>
+ <header>
       <div class="wrapper">
         <div class="header">
           <a href="/home.html">
@@ -149,22 +149,18 @@
 	
 
 		
-		<!-- Fillimi i faqes "About", pjesa me background me foto te zeze, ku brenda seksionit gjenden dy div-a-->
-		<section class="Hyrja" style="background-image: url(images/geom.jpg);">
-			<br><br><br>
-			<div class="nalt">
-
-			<h3><span style="font-weight:normal">About Us</h3>
-			</div>
+<!-- Fillimi i faqes "About", pjesa me background me foto te zeze, ku brenda seksionit gjenden dy div-a-->
+         <section class="Hyrja" style="background-image: url(images/geom.jpg);">
+	 <br><br><br>
+		<div class="nalt">
+			<h3><span style="font-weight:normal">About Us</span></h3>
+		</div>
 			
-			<div class="posht">
-			<h3 ><span style="font-weight:normal">DREAM HOUSE</h3>
-		    </div>
-
-
-
-		</section>
-		<br><br><br>
+		<div class="posht">
+		       <h3 ><span style="font-weight:normal">DREAM HOUSE</span></h3>
+		 </div>
+          </section>
+          <br><br><br>
 
 
 
@@ -174,39 +170,39 @@
 
 <div id="squarecontainer">
 
-	
     <div id="square1">
     	<div class="headtitle">
-    		<h2 class="about_us__article-heading"><span>ABOUT US</span></h2>
-    	    <p><span class="article-title">Hello! We are Dream House. Architecture Studio from USA</p><br><br>
+    		<h2 class="about_us__article-heading">ABOUT US</h2>
+    	         <p class="article-title">Hello! We are Dream House. Architecture Studio from USA</p><br><br>
     	</div>
         
-        <p ><span class="font2">Dream House Architecture was founded in 1994 with a commitment to making places better to live. We believe that architecture and design matter, and that through our work, we can make a positive difference in the world. We strive to create buildings that are not just things in themselves, but serve as catalysts for positive urban and social change.<br>
-        With our integrated team of architects, interior designers, planners and engineers, we advocate for the people who are served by the spaces we design. We engage with our clients on a personal level, as both institutions and people, so we can help them do better what they do best.	<br>
-        </p>
-    </div>
+                 <p class="font2">Dream House Architecture was founded in 1994 with a commitment to making places better to live. We believe that architecture and design matter, and that through our work, we can make a positive difference in the world. We strive to create buildings that are not just things in themselves, but serve as catalysts for positive urban and social change.<br>
+                 With our integrated team of architects, interior designers, planners and engineers, we advocate for the people who are served by the spaces we design. We engage with our clients on a personal level, as both institutions and people, so we can help them do better what they do best.	<br>
+                 </p>
+         </div>
  
 	
 	
-    <div id="square2">
+   <div id="square2">
     	<div class="frame">
     		<img src="images/teamwork.jpg"  alt=“Picture_of_architecture_teamwork” style="width:600px; height: 350px;" >
         </div>
-    </div>
+   </div>
 
 
+
+	
 <div id="squarecontainer">
     
-	
-	<div id="square3">
+    <div id="square3">
     	<div class="headtitle2">
-    		<h2 class="about_us__article-heading"><span>PROFESSIONAL TEAM</span></h2>
-    		 <p > <span class="article-title">Meet our head team:</p><br><br>
+    		<h2 class="about_us__article-heading">PROFESSIONAL TEAM</h2>
+    		<p class"article-title" >Meet our head team:</p><br><br>
     	</div>
     </div>
    
 	
-	<div id="square4">
+    <div id="square4">
     </div>
 
 
@@ -241,10 +237,10 @@
 		 <div class="column">
 			 <img src="images/portret3.jpg" alt="Profesional team" style="width:100%">
 			        <div class="tekst_overlay">
-    	                <h2>Philip Wilson</h2>
-    	                <h3>Architect</h3>
-    	                <p>Philip graduated from the University of Oregon, earning a bachelor’s degree in Architecture with a focus on sustainability. She was drawn to MWA because of our shared belief that social equity and environmentally responsible design go hand in hand. As a registered architect and AIA board member, he brings over 5 years of experience in mixed-use housing and higher education projects.
-                        </p>
+    	                           <h2>Philip Wilson</h2>
+    	                           <h3>Architect</h3>
+    	                           <p>Philip graduated from the University of Oregon, earning a bachelor’s degree in Architecture with a focus on sustainability. She was drawn to MWA because of our shared belief that social equity and environmentally responsible design go hand in hand. As a registered architect and AIA board member, he brings over 5 years of experience in mixed-use housing and higher education projects.
+                                   </p>
                      </div>
          </div>
   
@@ -269,10 +265,11 @@
 <div class="container">
 	<div class="box1">
 		<div class="section-heading">
-  		<h2 class="about_us__article-heading"><span>SPECIAL PRICES</span></h2>
-  		<p > <span class="article-title">Our pricing list:</p><br><br>
+  		    <h2 class="about_us__article-heading">SPECIAL PRICES</h2>
+  		    <p class="article-title" >Our pricing list:</p><br><br>
   	</div>
-  	<p ><span class="font2">A price list is a list of prices defined for a set of items. Each price list is applicable to a particular customer or a group of customers for a particular duration. A pricing organization can define different price lists for customers based on various criteria. 
+  	   <p class="font2">A price list is a list of prices defined for a set of items. Each price list is applicable to a particular customer or a group of customers for a particular duration. A pricing organization can define different price lists for customers based on various criteria. 
+	   </p>
 	<br>
   	</div>
 
@@ -310,12 +307,33 @@
 	</div>
 
 </div>
+br><br><br><br>
+	
 
 
 
+	
+	
+<!-- Pjesa e fundit, para footerit, "Great Clients" me foto levizese. -->
 
-
-
+<table width="95%">
+    <tr>
+	<td width="35%"> 
+	        <h2 class="heading">Our Clients</h2>
+    	        <p class="article-titll">Great Clients</p><br><br>
+        </td>
+	
+	<td width="65%">
+		<marquee behavior="alternate"; width="100%"; onmouseover="this.stop()"; onmouseout="this.start()";>
+			<img src="images/partner2.jpg" height="120px">
+			<img src="images/partner5.jpg" height="120px">
+			<img src="images/partner3.jpg" height="120px">
+			<img src="images/partner1.jpg" height="120px">
+			<img src="images/partner4.jpg" height="120px">
+		</marquee>	
+        </td>
+    </tr>
+</table>
 
 
 
